Properly re-align tally data when events change
When a re-tally occurs, we make sure that any existing
snapshots are re-aligned with the existing events. We
reset the appropriate snapshot measurements to 0.0 when
a matching event no longer exists, to ensure that
marketplace gets notified that the measurement has
'changed'.